# skyhetu

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: deploy_docs.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: causality.md  installation.md  introduction.md  modules.md
docs/reference/: builtins.md  grammar.md
examples/: advanced.skyh  causality.skyh  causality_demo.skyh  classes.skyh  closures.skyh  counter.skyh  fibonacci.skyh  gc_stress.skyh  hello.skyh  main_import.skyh  math.skyh  module_test.skyh  state_machine.skyh  stdlib_demo.skyh  test_fib.skyh  test_local_state.skyh
src/: ast.rs  bytecode.rs  causality.rs  compiler.rs  environment.rs  error.rs  gc.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  value.rs  vm.rs
tests/: classes.rs  classes.skyh  closures.rs
