[package]
name = "skyhetu"
version = "0.2.0"
edition = "2021"
authors = ["Aakash Kargathara"]
description = "A causality-first programming language with explicit state tracking and logical time."
license = "MIT"
repository = "https://github.com/Kargatharaakash/skyhetu"
keywords = ["programming-language", "compiler", "causality", "vm"]
categories = ["development-tools", "compilers"]

[dependencies]
rustyline = "15"
colored = "2"

[dev-dependencies]
